--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+1.2.0 (2021-02-23) - Přidána podpora IPTV Merge
+
 1.1.0 (2021-01-06) - První repo verze 
 
 1.0.4 (2020-12-14) - Zlepšena úspěšnost hledání v archivu
