--- a/resources/language/Czech/strings.po
+++ b/resources/language/Czech/strings.po
@@ -121,3 +121,12 @@ msgstr "Vybraný pořad má omezená práva\na není povoleno jeho stahování !
 msgctxt "#30410"
 msgid "Unexpectedly, more than one matching record\nwas found in the archive. The first one was chosen."
 msgstr "V archivu bylo nečekaně nalezeno více než jeden\nodpovídajících záznamů. Vybrán byl první z nich."
+
+msgctxt "#30500"
+msgid "This add-on is a service only and does not provide any playable content."
+msgstr "Tento doplněk je pouze služba a neposkytuje žádný přehratelný obsah."
+
+
+
+
+
