--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+1.2.2 (2021-05-15) - Přizpůsobení změnám v API Českého rozhlasu
+
 1.2.1 (2021-03-22) - Opravena chyba - zlepšeno hledání v archivu
 
 1.2.0 (2021-02-23) - Přidána podpora IPTV Merge
