--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+1.3.1 (2021-06-19) - Opravena chyba - nefunguje přehrávání z archivu
+
 1.3.0 (2021-06-18) - Playlist a EPG mohou být generovány nejen periodicky, ale i na vyžádání (např. doplňkem IPTV Merge)
 
 1.2.3 (2021-05-21) - Oprava - nová stanice Radiožurnál Sport způsobuje chybu (již je v playlistu, ale není v EPG)
