--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+1.3.2 (2021-12-04) - Opravena chyba - kromě mp3 je nyní akceptován i stream typu aac
+
 1.3.1 (2021-06-19) - Opravena chyba - nefunguje přehrávání z archivu
 
 1.3.0 (2021-06-18) - Playlist a EPG mohou být generovány nejen periodicky, ale i na vyžádání (např. doplňkem IPTV Merge)
