--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+1.4.2 (2022-03-16) - Opravena chyba - nefungovalo hledání v archivu, když linkType=='ondemand' a variant=='hls'
+                   - Opravena chyba - nefungovalo hledání v archivu, když uživatel měl nastavený 12-hodinový formát
+
 1.4.1 (2021-12-22) - Opravena chyba - nefungovalo stahování ve Windows (znak ":" v názvu souboru)
                    - Opravena chyba - odstraněna možnost konfliktů ID kanálu (ID je nyní doplněno prefixem "crolive_")
 
